deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vt
  template:
    metadata:
      labels:
        app: vt
    spec:
      containers:
      - name: vt
        image: vishal-trading
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: vt-service
  labels:
    app: vt
spec:
  type: ClusterIP 
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
  selector:
    app: vt
